--- a/templates/index.html
+++ b/templates/index.html
@@ -1,71 +1,41 @@
 {% extends 'wrapper.html' %}
 {% block title %}Merge For Shorts{% endblock %}
 {% block content %}
+<style>
+    .con {
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+    }
 
-<div class="card card-body col-md-4 m-auto mt-5">
-   
-    <div align="center">
-        <h1>Merge For Shorts</h1>
+    .middleDiv {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        left: 50%;
+        top: 30%;
+        margin-left: -100px;
+        /* half of the width  */
+        margin-top: -100px;
+        /* half of the height */
+    }
+
+    .centerFlex {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        gap: 5px;
+    }
+</style>
+
+
+
+<div class="mt-5">
+    <h3 class="text-center">Short-n-Merge</h3>
+    <div class="centerFlex">
+        <a href="/shorts" class="btn btn-sm btn-primary" style="width: fit-content;">Crop to Shorts</a>
+        <a href="/merge" class="btn btn-sm btn-primary" style="width: fit-content;">Merge videos for
+            Shorts</a>
     </div>
-
-    <form action="/uploadfile" method="post" class="mt-4" enctype="multipart/form-data">
-        <div class="mb-2">
-            {% if error %}
-            <div class="alert alert-danger">{{ error }}</div>
-            {% endif %}
-
-            {% if success %}
-            <div class="alert alert-success" id="success-msg">
-                {{ success }}
-                <span aria-hidden="true" style="margin-left: 109px;cursor: pointer;" onclick="hideText()">&times;</span>
-            </div>
-
-            <script>
-                function hideText() {
-                    var myDiv = document.getElementById('success-msg');
-                    myDiv.style.display = 'none';
-                }
-            </script>
-
-            {% endif %}
-
-            <div class="mb-2">
-                <label for="">Upload Your Video &#x1F447; </label>
-                <input id="file-input" class="form-control" name="file" type="file" accept="video/mp4">
-            </div>
-
-            <div class="mb-2 mt-5">
-                <label for="">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-film" viewBox="0 0 16 16">
-                        <path
-                            d="M0 1a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V1zm4 0v6h8V1H4zm8 8H4v6h8V9zM1 1v2h2V1H1zm2 3H1v2h2V4zM1 7v2h2V7H1zm2 3H1v2h2v-2zm-2 3v2h2v-2H1zM15 1h-2v2h2V1zm-2 3v2h2V4h-2zm2 3h-2v2h2V7zm-2 3v2h2v-2h-2zm2 3h-2v2h2v-2z" />
-                    </svg>
-                    Select Secondary Clip</label>
-                <select name="secfiles" class="form-control">
-                    {% for i in gameclips %}
-                    {% set parts = i.split('.') %}
-                    {% set filename = parts[0] %}
-                    <option value="{{ i }}">{{ filename }}</option>
-
-                    {% endfor %}
-                </select>
-            </div>
-        </div>
-        <div class="d-grid gap-2 mt-5">
-            <button type="submit" class="btn  btn-primary">
-                Create
-            </button>
-        </div>
-    </form>
 </div>
-
-{% if success %}
-<div class="card card-body col-md-4 m-auto mt-4">
-    <video controls>
-        <source src={{ url_for('static', filename=video ) }} type="video/mp4">
-    </video>
-</div>
-{% endif %}
-
 {% endblock %}
